--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -14,13 +14,15 @@ jobs:
     name: Build & Release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
+           distribution: 'zulu'
            java-version: '12.x'
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '3.3.9'   
+          flutter-version: '3.0.0'
+          channel: 'stable'
       - run: flutter pub get
       - run: flutter build apk 
       - name: Push to Releases
